--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0+4
   google_fonts: ^0.5.0+1
   shared_preferences: ^0.5.6+3
+  faker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
